# squark

./: Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
crates/squark-app/: Cargo.toml
crates/squark-app/src/: main.rs  settings.rs  ui.rs
crates/squark-engine/: Cargo.toml
crates/squark-engine/src/: lib.rs
scripts/: pi_deploy.sh  pi_run.sh
